syntax = "proto3";
package engine;

// TODO: Migrate to gRPC + flatbuffers once supported
// See: https://github.com/google/flatbuffers/issues/4919

service Engine {
  // Executes a raw query processing (usually as part of ingest preprocessing)
  rpc ExecuteRawQuery(RawQueryRequest) returns (stream RawQueryResponse);
  // Performs the next iteration of the streaming derivative transformation
  rpc ExecuteTransform(TransformRequest) returns (stream TransformResponse);
}

message RawQueryRequest { bytes flatbuffer = 1; }
message RawQueryResponse { bytes flatbuffer = 1; }

message TransformRequest { bytes flatbuffer = 1; }
message TransformResponse { bytes flatbuffer = 1; }
